Revert, misc